resources/services/acs-fleet-manager/integration/fleet-manager.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: acs-fleet-manager
  name: acs-fleet-manager
spec:
  host: qj3layty4dynlnz.api.integration.openshift.com
  to:
    kind: Service
    name: fleet-manager-envoy
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
